add modal window

--- a/module/Application/view/application/event/index.phtml
+++ b/module/Application/view/application/event/index.phtml
@@ -2,14 +2,14 @@
     <?php
     foreach ($events as $event) {
     ?>
-    <div class="col-md-4">
+    <div class="col-md-4 event" data-id="<?php echo $event->getId()?>">
         <div class="panel panel-default">
             <div class="panel-heading">
                 <h3 class="panel-title"><?php echo $event->getName(); ?></h3>
             </div>
             <div class="panel-body">
                 <p><?php echo $event->getShortDescription(); ?></p>
-                <p><button class="btn btn-success pull-right" data-toggle="modal" data-target="#exampleModalCenter">See detail &raquo;</button></p>
+                <p><button class="btn btn-success pull-right modalInfoShow" data-toggle="modal" data-target="#modalInfo">See detail &raquo;</button></p>
             </div>
             <div class="panel-footer text-muted">
                 <?php echo $event->getDate()->format('Y-m-d H:i');?>
@@ -18,21 +18,32 @@
     </div>
     <?php }?>
 
-    <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+    <div class="modal fade" id="modalInfo" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLongTitle">Modal title</h5>
+                    <h5 class="modal-title" id="modalInfoTitle">Modal title</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
                 <div class="modal-body">
-
+                    <p id="fullDescription"></p>
+                    <br>
+                    <form id="clientForm">
+                        <div class="form-group">
+                            <label for="clientFormFullName">Full name</label>
+                            <input type="email" class="form-control" id="clientFormFullName" aria-describedby="fullName" placeholder="Enter full name" name="name">
+                        </div>
+                        <div class="form-group">
+                            <label for="clientFormEmail">Email address</label>
+                            <input type="email" class="form-control" aria-describedby="emailHelp" id="clientFormEmail" placeholder="Enter email" name="email">
+                        </div>
+                    </form>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Save changes</button>
+                    <button type="submit" form="clientForm" class="btn btn-primary">Submit</button>
                 </div>
             </div>
         </div>
